--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -3,37 +3,35 @@ name: Deploy Hugo # 任君喜欢
 name: deploy
 
 on:
-    push:
-    workflow_dispatch:
-    schedule:
-        # Runs everyday at 8:00 AM
-        - cron: "0 0 * * *"
+   push:
+     branches:
+       - master
 
 jobs:
     build:
-        runs-on: ubuntu-latest
+      runs-on: ubuntu-latest
         steps:
-            - name: Checkout
-              uses: actions/checkout@v2
-              with:
-                  submodules: true
-                  fetch-depth: 0
+          - name: Checkout
+            uses: actions/checkout@v2
+            with:
+              submodules: true
+              fetch-depth: 0
 
-            - name: Setup Hugo
-              uses: peaceiris/actions-hugo@v2
-              with:
-                  hugo-version: "latest"
+          - name: Setup Hugo
+            uses: peaceiris/actions-hugo@v2
+            with:
+              hugo-version: "latest"
 
-            - name: Build Web
+          - name: Build Web
               run: hugo
 
-            - name: Deploy Web
+          - name: Deploy Web
               uses: peaceiris/actions-gh-pages@v3
               with:
-                  PERSONAL_TOKEN: ${{ secrets.personal_token }}
-                  EXTERNAL_REPOSITORY: sheldonzipingchen/sheldonzipingchen.github.io
-                  PUBLISH_BRANCH: master
-                  PUBLISH_DIR: ./public
-                  commit_message: ${{ github.event.head_commit.message }}
+                PERSONAL_TOKEN: ${{ secrets.personal_token }}
+                EXTERNAL_REPOSITORY: sheldonzipingchen/sheldonzipingchen.github.io
+                PUBLISH_BRANCH: master
+                PUBLISH_DIR: ./public
+                commit_message: ${{ github.event.head_commit.message }}
 
 
