--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://sheldonzipingchen.github.io'
+baseURL = 'https://sheldonzipingchen.github.io/'
 languageCode = 'en-us'
 theme = 'ezhil'
 title = 'Sheldon Talk'
